--- a/Draw/Controller/Shop/VendingController.xib
+++ b/Draw/Controller/Shop/VendingController.xib
@@ -2,9 +2,9 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.SystemVersion">11G56</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.AppKitVersion">1138.51</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -44,7 +44,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="713539296"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -66,21 +65,15 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrameSize">{307, 360}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="396263088"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<object class="NSCustomResource" key="IBUIImage">
-											<string key="NSClassName">NSImage</string>
-											<string key="NSResourceName">shopping_bg@2x.png</string>
-										</object>
 									</object>
 									<object class="IBUIImageView" id="396263088">
 										<reference key="NSNextResponder" ref="562959135"/>
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{5, 69}, {297, 54}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="58454433"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -94,7 +87,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{5, 179}, {297, 54}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="711677905"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -105,7 +97,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{5, 288}, {297, 55}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="207098718"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -116,7 +107,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{37, 89}, {17, 17}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="86274896"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -130,7 +120,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{57, 89}, {42, 17}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="791406378"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -161,7 +150,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{45, 309}, {42, 17}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="792334924"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -188,7 +176,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{129, 89}, {17, 17}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="82807652"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -199,7 +186,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{154, 89}, {42, 17}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="276348225"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -219,7 +205,6 @@
 										<int key="NSvFlags">-2147483329</int>
 										<string key="NSFrame">{{221, 20}, {61, 61}}</string>
 										<reference key="NSSuperview" ref="562959135"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="338791629"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -231,7 +216,6 @@
 								</array>
 								<string key="NSFrameSize">{307, 360}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="185083813"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="432984982">
 									<int key="NSColorSpace">3</int>
@@ -244,7 +228,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24, 23}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="270631237"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -255,7 +238,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24, 137}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="113605286"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -266,7 +248,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{24, 243}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="833121197"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -277,7 +258,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{122, 23}, {61, 61}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="412827066"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -288,7 +268,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{23, 200}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="373843065"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -299,7 +278,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{45, 199}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="142699992"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -319,7 +297,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{23, 309}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="19251433"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -330,7 +307,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{230, 89}, {17, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="591335896"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -341,7 +317,6 @@
 								<int key="NSvFlags">-2147483329</int>
 								<string key="NSFrame">{{251, 89}, {42, 17}}</string>
 								<reference key="NSSuperview" ref="792382614"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="983130616"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -359,7 +334,6 @@
 						</array>
 						<string key="NSFrame">{{7, 41}, {307, 360}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="562959135"/>
 						<reference key="IBUIBackgroundColor" ref="432984982"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -372,7 +346,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{7, 6}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="691337008"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -409,7 +382,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{80.5, 6}, {159, 33}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="750872099"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -423,7 +395,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{7, 404}, {115, 54}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="622926089"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -437,7 +408,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{130, 416}, {95, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="151623773"/>
 						<reference key="IBUIBackgroundColor" ref="432984982"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -461,7 +431,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{132, 419}, {24, 24}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="427970999"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -475,7 +444,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{232, 416}, {82, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -507,7 +475,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{247.5, 8}, {66.5, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="792382614"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -527,7 +494,6 @@
 						<int key="NSvFlags">301</int>
 						<string key="NSFrame">{{46, 403}, {36, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="943779253"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -537,7 +503,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{58, 6}, {192, 33}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="322271871"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="432984982"/>
@@ -569,7 +534,6 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{141, 369}, {38, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="146562100"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -581,7 +545,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="708246902"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -1001,104 +964,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">62</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">FontLabel</string>
-					<string key="superclassName">UILabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HKGirlFontLabel</string>
-					<string key="superclassName">FontLabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UICustomPageControl</string>
-					<string key="superclassName">UIPageControl</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UICustomPageControl.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">VendingController</string>
-					<string key="superclassName">PPViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bgImageView">UIImageView</string>
-						<string key="buyCoinButton">UIButton</string>
-						<string key="coinsButton">UIButton</string>
-						<string key="coinsShopButton">UIButton</string>
-						<string key="itemListScrollView">UIScrollView</string>
-						<string key="itemOutImageView">UIImageView</string>
-						<string key="outItem">UIImageView</string>
-						<string key="pageControl">UICustomPageControl</string>
-						<string key="titleImageView">UIImageView</string>
-						<string key="titleLabel">HKGirlFontLabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bgImageView">
-							<string key="name">bgImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="buyCoinButton">
-							<string key="name">buyCoinButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="coinsButton">
-							<string key="name">coinsButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="coinsShopButton">
-							<string key="name">coinsShopButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemListScrollView">
-							<string key="name">itemListScrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemOutImageView">
-							<string key="name">itemOutImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="outItem">
-							<string key="name">outItem</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="pageControl">
-							<string key="name">pageControl</string>
-							<string key="candidateClassName">UICustomPageControl</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleImageView">
-							<string key="name">titleImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/VendingController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -1114,7 +980,6 @@
 			<string key="reward_coin.png">{16, 16}</string>
 			<string key="shop_icon@2x.png">{317, 66}</string>
 			<string key="shop_shelf@2x.png">{570, 108}</string>
-			<string key="shopping_bg@2x.png">{589, 730}</string>
 			<string key="small_coin@2x.png">{27, 27}</string>
 			<string key="tomato@2x.png">{122, 122}</string>
 			<string key="wood_shop_bg@2x.png">{640, 960}</string>
